package app.domain.model;

public class NewVaccine {
}
